@@ -4,11 +4,9 @@ import com.quorum.tessera.enclave.Enclave;
 import com.quorum.tessera.enclave.EncodedPayload;
 import com.quorum.tessera.enclave.PayloadEncoder;
 import com.quorum.tessera.encryption.PublicKey;
-import com.quorum.tessera.partyinfo.PartyInfoParser;
 import com.quorum.tessera.partyinfo.PartyInfoService;
-import com.quorum.tessera.partyinfo.model.Party;
-import com.quorum.tessera.partyinfo.model.PartyInfo;
-import com.quorum.tessera.partyinfo.model.Recipient;
+import com.quorum.tessera.partyinfo.model.*;
+import com.quorum.tessera.partyinfo.node.NodeInfo;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
@@ -17,6 +15,7 @@ import org.mockito.invocation.InvocationOnMock;
 import org.mockito.stubbing.Answer;
 
 import javax.json.Json;
+import javax.json.JsonObject;
 import javax.json.JsonReader;
 import javax.ws.rs.client.Client;
 import javax.ws.rs.client.Entity;
@@ -69,28 +68,27 @@ public class PartyInfoResourceTest {
         final String partyInfoJson =
                 "{\"url\":\"http://localhost:9001/\",\"peers\":[{\"url\":\"http://localhost:9006/\",\"lastContact\":null},{\"url\":\"http://localhost:9005/\",\"lastContact\":\"2019-01-02T15:03:22.875Z\"}],\"keys\":[{\"key\":\"BULeR8JyUWhiuuCMU/HLA0Q5pzkYT+cHII3ZKBey3Bo=\",\"url\":\"http://localhost:9001/\"},{\"key\":\"QfeDAys9MPDs2XHExtc84jKGHxZg/aj52DTh0vtA3Xc=\",\"url\":\"http://localhost:9002/\"}]}";
 
-        final Party partyWithoutTimestamp = new Party("http://localhost:9006/");
-        final Party partyWithTimestamp = new Party("http://localhost:9005/");
+        final com.quorum.tessera.partyinfo.node.Party partyWithoutTimestamp = new com.quorum.tessera.partyinfo.node.Party("http://localhost:9006/");
+        final com.quorum.tessera.partyinfo.node.Party partyWithTimestamp = new com.quorum.tessera.partyinfo.node.Party("http://localhost:9005/");
         partyWithTimestamp.setLastContacted(Instant.parse("2019-01-02T15:03:22.875Z"));
 
-        final PartyInfo partyInfo =
-                new PartyInfo(
-                        "http://localhost:9001/",
-                        new HashSet<>(
-                                Arrays.asList(
-                                        Recipient.of(
-                                                PublicKey.from(
-                                                        Base64.getDecoder()
-                                                                .decode(
-                                                                        "BULeR8JyUWhiuuCMU/HLA0Q5pzkYT+cHII3ZKBey3Bo=")),
-                                                "http://localhost:9001/"),
-                                        Recipient.of(
-                                                PublicKey.from(
-                                                        Base64.getDecoder()
-                                                                .decode(
-                                                                        "QfeDAys9MPDs2XHExtc84jKGHxZg/aj52DTh0vtA3Xc=")),
-                                                "http://localhost:9002/"))),
-                        new HashSet<>(Arrays.asList(partyWithTimestamp, partyWithoutTimestamp)));
+        NodeInfo partyInfo = NodeInfo.Builder.create()
+            .withUrl("http://localhost:9001/")
+            .withRecipients(List.of(
+                com.quorum.tessera.partyinfo.node.Recipient.of(
+                    PublicKey.from(
+                        Base64.getDecoder()
+                            .decode(
+                                "BULeR8JyUWhiuuCMU/HLA0Q5pzkYT+cHII3ZKBey3Bo=")),
+                    "http://localhost:9001/"),
+                com.quorum.tessera.partyinfo.node.Recipient.of(
+                    PublicKey.from(
+                        Base64.getDecoder()
+                            .decode(
+                                "QfeDAys9MPDs2XHExtc84jKGHxZg/aj52DTh0vtA3Xc=")),
+                    "http://localhost:9002/")))
+            .withParties(List.of(partyWithoutTimestamp,partyWithTimestamp))
+            .build();
 
         when(partyInfoService.getPartyInfo()).thenReturn(partyInfo);
 
@@ -103,7 +101,15 @@ public class PartyInfoResourceTest {
         final JsonReader expected = Json.createReader(new StringReader(partyInfoJson));
         final JsonReader actual = Json.createReader(new StringReader(output));
 
-        assertThat(expected.readObject()).isEqualTo(actual.readObject());
+        JsonObject expectedJsonObject = expected.readObject();
+        JsonObject actualJsonObject = actual.readObject();
+
+        assertThat(actualJsonObject.getJsonArray("keys"))
+            .containsExactlyInAnyOrderElementsOf(expectedJsonObject.getJsonArray("keys"));
+        assertThat(actualJsonObject.getJsonArray("peers"))
+            .containsExactlyInAnyOrderElementsOf(expectedJsonObject.getJsonArray("peers"));
+        assertThat(actualJsonObject.getString("url"))
+            .isEqualTo(expectedJsonObject.getString("url"));
 
         verify(partyInfoService).getPartyInfo();
     }
@@ -160,9 +166,10 @@ public class PartyInfoResourceTest {
 
         when(invocationBuilder.post(any(Entity.class))).thenReturn(response);
 
-        when(partyInfoService.updatePartyInfo(any(PartyInfo.class))).thenReturn(partyInfo);
+        when(partyInfoService.updatePartyInfo(any(NodeInfo.class)))
+            .thenReturn(NodeInfoUtil.from(partyInfo,null));
 
-        Response result = partyInfoResource.partyInfo(payload);
+        Response result = partyInfoResource.partyInfo(payload, List.of("v1,v2"));
 
         assertThat(result.getStatus()).isEqualTo(200);
 
@@ -171,13 +178,22 @@ public class PartyInfoResourceTest {
         verify(enclave).encryptPayload(any(byte[].class), any(PublicKey.class), anyList());
         verify(payloadEncoder).encode(encodedPayload);
         verify(restClient).target(url);
-        verify(partyInfoService).updatePartyInfo(any(PartyInfo.class));
+
+        ArgumentCaptor<NodeInfo> argCaptor = ArgumentCaptor.forClass(NodeInfo.class);
+        verify(partyInfoService).updatePartyInfo(argCaptor.capture());
+
+        final NodeInfo nodeInfo = argCaptor.getValue();
+        assertThat(nodeInfo).isNotNull();
+        assertThat(nodeInfo.getUrl()).isEqualTo(url);
+        assertThat(nodeInfo.supportedApiVersions())
+            .containsExactlyInAnyOrder("v1","v2");
+
     }
 
     @Test
     public void validate() {
 
-        String message = "I love sparrows";
+        String message = UUID.randomUUID().toString();
 
         byte[] payload = message.getBytes();
 
@@ -200,6 +216,31 @@ public class PartyInfoResourceTest {
     }
 
     @Test
+    public void validateReturns400IfMessageIsNotUUID() {
+
+        String message = "I love sparrows";
+
+        byte[] payload = message.getBytes();
+
+        PublicKey myKey = PublicKey.from("myKey".getBytes());
+
+        EncodedPayload encodedPayload = mock(EncodedPayload.class);
+        when(encodedPayload.getRecipientKeys()).thenReturn(Collections.singletonList(myKey));
+
+        when(payloadEncoder.decode(payload)).thenReturn(encodedPayload);
+
+        when(enclave.unencryptTransaction(encodedPayload, myKey)).thenReturn(message.getBytes());
+
+        Response result = partyInfoResource.validate(payload);
+
+        assertThat(result.getStatus()).isEqualTo(400);
+        assertThat(result.getEntity()).isNull();
+
+        verify(payloadEncoder).decode(payload);
+        verify(enclave).unencryptTransaction(encodedPayload, myKey);
+    }
+
+    @Test
     public void constructWithMinimalArgs() {
         PartyInfoResource instance =
                 new PartyInfoResource(partyInfoService, partyInfoParser, restClient, enclave, true);
@@ -207,7 +248,10 @@ public class PartyInfoResourceTest {
     }
 
     @Test
-    public void partyInfoValidateNodeFails() {
+    public void partyInfoExceptionIfValidationFailsWith200() {
+
+        final int validateResponseCode = 200;
+        final String validateResponseMsg = "BADRESPONSE";
 
         String url = "http://www.bogus.com";
 
@@ -244,14 +288,73 @@ public class PartyInfoResourceTest {
         when(webTarget.request()).thenReturn(invocationBuilder);
 
         Response response = mock(Response.class);
-        when(response.getStatus()).thenReturn(200);
+        when(response.getStatus()).thenReturn(validateResponseCode);
 
-        doAnswer((invocation) -> "BADRESPONSE").when(response).readEntity(String.class);
+        doAnswer((invocation) -> validateResponseMsg).when(response).readEntity(String.class);
 
         when(invocationBuilder.post(any(Entity.class))).thenReturn(response);
 
         try {
-            partyInfoResource.partyInfo(payload);
+            partyInfoResource.partyInfo(payload, Collections.emptyList());
+            failBecauseExceptionWasNotThrown(SecurityException.class);
+        } catch (SecurityException ex) {
+            verify(partyInfoParser).from(payload);
+            verify(enclave).defaultPublicKey();
+            verify(enclave).encryptPayload(any(byte[].class), any(PublicKey.class), anyList());
+            verify(payloadEncoder).encode(encodedPayload);
+            verify(restClient).target(url);
+        }
+    }
+
+    @Test
+    public void partyInfoExceptionIfValidationFailsWith400() {
+
+        final int validateResponseCode = 400;
+        final String validateResponseMsg = null;
+
+        String url = "http://www.bogus.com";
+
+        PublicKey myKey = PublicKey.from("myKey".getBytes());
+
+        PublicKey recipientKey = PublicKey.from("recipientKey".getBytes());
+
+        String message = "I love sparrows";
+
+        byte[] payload = message.getBytes();
+
+        Recipient recipient = Recipient.of(recipientKey, url);
+
+        Set<Recipient> recipientList = Collections.singleton(recipient);
+
+        PartyInfo partyInfo = new PartyInfo(url, recipientList, Collections.emptySet());
+
+        when(partyInfoParser.from(payload)).thenReturn(partyInfo);
+
+        when(enclave.defaultPublicKey()).thenReturn(myKey);
+
+        when(partyInfoParser.to(partyInfo)).thenReturn(payload);
+
+        EncodedPayload encodedPayload = mock(EncodedPayload.class);
+
+        when(enclave.encryptPayload(any(byte[].class), any(PublicKey.class), anyList())).thenReturn(encodedPayload);
+
+        when(payloadEncoder.encode(encodedPayload)).thenReturn(payload);
+
+        WebTarget webTarget = mock(WebTarget.class);
+        when(restClient.target(url)).thenReturn(webTarget);
+        when(webTarget.path(anyString())).thenReturn(webTarget);
+        Invocation.Builder invocationBuilder = mock(Invocation.Builder.class);
+        when(webTarget.request()).thenReturn(invocationBuilder);
+
+        Response response = mock(Response.class);
+        when(response.getStatus()).thenReturn(validateResponseCode);
+
+        doAnswer((invocation) -> validateResponseMsg).when(response).readEntity(String.class);
+
+        when(invocationBuilder.post(any(Entity.class))).thenReturn(response);
+
+        try {
+            partyInfoResource.partyInfo(payload, List.of("v1","v2"));
             failBecauseExceptionWasNotThrown(SecurityException.class);
         } catch (SecurityException ex) {
             verify(partyInfoParser).from(payload);
@@ -303,7 +406,7 @@ public class PartyInfoResourceTest {
                 .thenThrow(new UncheckedIOException(new IOException("GURU meditation")));
 
         try {
-            partyInfoResource.partyInfo(payload);
+            partyInfoResource.partyInfo(payload,null);
             failBecauseExceptionWasNotThrown(SecurityException.class);
         } catch (SecurityException ex) {
             verify(partyInfoParser).from(payload);
@@ -327,15 +430,15 @@ public class PartyInfoResourceTest {
         final Set<Recipient> recipientList =
                 new HashSet<>(Arrays.asList(Recipient.of(recipientKey, url), Recipient.of(recipientKey, otherurl)));
         final PartyInfo partyInfo = new PartyInfo(url, recipientList, Collections.emptySet());
-
+        final NodeInfo nodeInfo = NodeInfoUtil.from(partyInfo,null);
         final ArgumentCaptor<PartyInfo> captor = ArgumentCaptor.forClass(PartyInfo.class);
         final byte[] serialisedData = "SERIALISED".getBytes();
 
         when(partyInfoParser.from(payload)).thenReturn(partyInfo);
-        when(partyInfoService.getPartyInfo()).thenReturn(partyInfo);
+        when(partyInfoService.getPartyInfo()).thenReturn(nodeInfo);
         when(partyInfoParser.to(captor.capture())).thenReturn(serialisedData);
 
-        final Response callResponse = partyInfoResource.partyInfo(payload);
+        final Response callResponse = partyInfoResource.partyInfo(payload, null);
         final byte[] data = (byte[]) callResponse.getEntity();
 
         assertThat(captor.getValue().getUrl()).isEqualTo(url);
@@ -345,16 +448,16 @@ public class PartyInfoResourceTest {
         verify(partyInfoParser).from(payload);
         verify(partyInfoParser).to(any(PartyInfo.class));
 
-        final ArgumentCaptor<PartyInfo> modifiedPartyInfoCaptor = ArgumentCaptor.forClass(PartyInfo.class);
+        final ArgumentCaptor<NodeInfo> modifiedPartyInfoCaptor = ArgumentCaptor.forClass(NodeInfo.class);
 
         verify(partyInfoService).updatePartyInfo(modifiedPartyInfoCaptor.capture());
-        final PartyInfo modified = modifiedPartyInfoCaptor.getValue();
+        final NodeInfo modified = modifiedPartyInfoCaptor.getValue();
 
         assertThat(modified.getUrl()).isEqualTo(url);
 
-        Set<Recipient> updatedRecipients = modified.getRecipients();
+        Set<com.quorum.tessera.partyinfo.node.Recipient> updatedRecipients = modified.getRecipients();
         assertThat(updatedRecipients)
-                .containsExactlyInAnyOrder(Recipient.of(recipientKey, url), Recipient.of(recipientKey, otherurl));
+                .containsExactlyInAnyOrder(com.quorum.tessera.partyinfo.node.Recipient.of(recipientKey, url), com.quorum.tessera.partyinfo.node.Recipient.of(recipientKey, otherurl));
 
         assertThat(modified.getParties()).isEmpty();
 
@@ -409,10 +512,10 @@ public class PartyInfoResourceTest {
             }
         }).when(response).readEntity(String.class);
 
-        when(partyInfoService.updatePartyInfo(any(PartyInfo.class))).thenReturn(partyInfo);
+        when(partyInfoService.updatePartyInfo(any(NodeInfo.class))).thenReturn(NodeInfoUtil.from(partyInfo,null));
 
         // the test
-        partyInfoResource.partyInfo(payload);
+        partyInfoResource.partyInfo(payload, null);
 
         ArgumentCaptor<byte[]> uuidCaptor = ArgumentCaptor.forClass(byte[].class);
         verify(enclave, times(2)).encryptPayload(uuidCaptor.capture(), any(PublicKey.class), anyList());
@@ -421,7 +524,7 @@ public class PartyInfoResourceTest {
         assertThat(capturedUUIDs.get(0)).isNotEqualTo(capturedUUIDs.get(1));
 
         // other verifications
-        verify(partyInfoService).updatePartyInfo(any(PartyInfo.class));
+        verify(partyInfoService).updatePartyInfo(any(NodeInfo.class));
         verify(partyInfoParser).from(payload);
         verify(enclave).defaultPublicKey();
         verify(payloadEncoder, times(2)).encode(encodedPayload);
